--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 /pythonTestMagnet
 /MockTest
 /SQLhackerRank
+/10DaysJavascript
+/10DaysOfStatistics
+/codewars
+/PreparationKit-HaRank
+/playingAround
+/NewFreecodecamp
